# protodef-rs

./: Cargo.toml  test.json
src/: approach.md  gen.rs  gen1  json.rs  lib.rs  merge.rs  pds.rs  to_ident.rs
src/native/: container.rs  mod.rs  switch.rs
src/old_code/: native
