[package]
name = "protodef-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.4.0"
dyn-clone = "1.0.4"
indexmap = "1.7.0"
lazy_static = "1.4.0"
proc-macro2 = "1.0.34"
quote = "1.0.10"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"

[features]
